feat : fix bookmark bug and tweak logic for album and bookmark (related)
